test/corpus/assignments.txt
====================
Assignment - Boolean
====================

x = false

---

(source_file
  (assignment
    (identifier)
    (boolean)))

====================
Assignment - Integer
====================

x = 12345

---

(source_file
  (assignment
    (identifier)
    (integer)))

===================================
Assignment - Binary Op w/ Reference
===================================

x = x + 1

---

(source_file
  (assignment
    (identifier)
    (binary_expr
      (identifier)
      (arithmetic_op)
      (integer))))
