test/corpus/binary_expressions.txt
==============================
Binary - Arithmetic Operations
==============================

1 + 2 − 3 ∗ 4 / 5

---

(source_file
  (binary_expr
    (binary_expr
      (binary_expr
        (binary_expr
          (integer)
          (arithmetic_op)
          (integer))
        (arithmetic_op)
        (integer))
      (arithmetic_op)
      (integer))
    (arithmetic_op)
    (integer)))

==============================
Binary - Relational Operations
==============================

1 > 2 >= 3 < 4 <= 5

---

(source_file
  (binary_expr
    (binary_expr
      (binary_expr
        (binary_expr
          (integer)
          (relational_op)
          (integer))
        (relational_op)
        (integer))
      (relational_op)
      (integer))
    (relational_op)
    (integer)))

============================
Binary - Mixed with Identifiers
============================

x + y < z

---

(source_file
  (binary_expr
    (binary_expr
      (identifier)
      (arithmetic_op)
      (identifier))
    (relational_op)
    (identifier)))
