test/corpus/if_expressions.txt
========================
If - Boolean Expressions
========================

if true then 
    true 
else 
    false
end

---

(source_file
  (if_expr
    (boolean)
    (boolean)
    (boolean)))

========================
If - Integer Expressions
========================

if 1 then 2 else 3 end

---

(source_file
  (if_expr
    (integer)
    (integer)
    (integer)))

============================
If - Mixed Value Expressions
============================

if 1 then true else 45 end

---

(source_file
  (if_expr
    (integer)
    (boolean)
    (integer)))

============================
If - Declaration Expressions
============================

if x := true then y := 10 else y := 5 end

---

(source_file
  (if_expr
    (declaration
      (identifier)
      (boolean))
    (declaration
      (identifier)
      (integer))
    (declaration
      (identifier)
      (integer))))

==================
If - Optional Else
==================

if true then 
    2
end

---

(source_file
  (if_expr
    (boolean)
    (integer)))
