test/corpus/multiple_expressions.txt
=============================
Source - Multiple Assignments
=============================

x := 1
y := false
z := 100

---

(source_file
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (boolean))
  (assignment
    (identifier)
    (integer)))

=============================
Source - Mixed Top-Level
=============================

x := 1
while true do 2 done
3 ; 4

---

(source_file
  (assignment
    (identifier)
    (integer))
  (while_expr
    (boolean)
    (integer))
  (seq_expr
    (integer)
    (integer)))
