test/corpus/seq_expressions.txt
===========================
Seq - Value Expressions
===========================

true; 1

---

(source_file
  (seq_expr
    (boolean)
    (integer)))

==========================
Seq - Chained Expressions
==========================

1 ; 2 ; 3

---

(source_file
  (seq_expr
    (seq_expr
      (integer)
      (integer))
    (integer)))

==========================
Seq - Declarations
==========================

x := 10 ; y := true

---

(source_file
  (seq_expr
    (declaration
      (identifier)
      (integer))
    (declaration
      (identifier)
      (boolean))))

==========================
Seq - Control Structures
==========================

if true then 1 else 2 end ; while false do 3 done

---

(source_file
  (seq_expr
    (if_expr
      (boolean)
      (integer)
      (integer))
    (while_expr
      (boolean)
      (integer))))
