test/corpus/while_expressions.txt
===========================
While - Boolean Expressions
===========================

while true do false done

---

(source_file
  (while_expr
    (boolean)
    (boolean)))

===========================
While - Integer Expressions
===========================

while 1 do 2 done

---

(source_file
  (while_expr
    (integer)
    (integer)))

====================
While - If Condition
====================

while if 2 then true else false end do 2 done

---

(source_file
  (while_expr
    (if_expr
      (integer)
      (boolean)
      (boolean))
    (integer)))

===================================
While - Binary Expression Condition
===================================

while 1 + 2 < 5 do 10 done

---

(source_file
  (while_expr
    (binary_expr
      (binary_expr
        (integer)
        (arithmetic_op)
        (integer))
      (relational_op)
      (integer))
    (integer)))

=============================
While - Assignment Expression
=============================
x := 0
while x < 10 do x = x + 1 done

---

(source_file
  (declaration
    (identifier)
    (integer))
  (while_expr
    (binary_expr
        (identifier)
        (relational_op)
        (integer))
    (assignment
      (identifier)
      (binary_expr
        (identifier)
        (arithmetic_op)
        (integer)))))
